--- a/index.HTML
+++ b/index.HTML
@@ -15,22 +15,20 @@
     <title>Document</title>
 </head>
 <body>
-    <section class="navbar">
-        <div class="navButtonGRP">
-            <div class="navtext">
-                <button class="NavButton" style="vertical-align:middle"><span>Hover </span></button>
-                <button class="NavButton" style="vertical-align:middle"><span>Hover </span></button>
-                <button class="NavButton" style="vertical-align:middle"><span>Hover </span></button>
-            </div>
-        </div>
-    </section>
     
     <section class="first">
-        <div class="TitleBox">
-            <h3 class="title1">Hello, I am...<br></h3>
-            <h1 class="title2">Fernando Kok</h1>
-            <h5 class="title3">I am a Software Developer based in the Netherlands...</h5>
-        </div>
+        <section class="NavButtons">
+            <button class="NavButton" style="vertical-align:middle"><span>Hover </span></button>
+            <button class="NavButton" style="vertical-align:middle"><span>Hover </span></button>
+            <button class="NavButton" style="vertical-align:middle"><span>Hover </span></button>
+        </section>
+        <section class="title">
+            <div class="TitleBox">
+                <h3 class="title1">Hello, I am...<br></h3>
+                <h1 class="title2">Fernando Kok</h1>
+                <h5 class="title3">I am a Software Developer based in the Netherlands...</h5>
+            </div>
+        </section>
     </section>
 
     <section class="second">
