--- a/index.HTML
+++ b/index.HTML
@@ -24,20 +24,25 @@
         </section>
         <section class="title">
             <div class="TitleBox">
-                <h3 class="title1">Hello, I am...<br></h3>
-                <h1 class="title2">Fernando Kok</h1>
-                <h5 class="title3">I am a Software Developer based in the Netherlands...</h5>
+                <div class="">
+                    <h3 class="title1">Hello, I am...</h3>
+                    <h1 class="title2">Fernando Kok</h1>
+                    <h5 class="title3">I am a Software Developer based in the Netherlands...</h5>
+                </div>
+            </div>
+            <div class="titleIMG">
+                <img src="/Images/Me.jpg">
             </div>
         </section>
     </section>
     <section class="second">
         <div class="Box">
             <h1 class="BoxTitle">About me</h1>
-            <h3 class="BoxText"><br>I am an 18 year old software development student studying at Sintlucas since 2021. I live in venray with my mother and my cat.</h3>
+            <h3 class="BoxText"><br>I am an 18 year old software development student. I've been studying at sintlucas since 2021. I live in venray with my mother and my cat. I've been living there since 2021</h3>
         </div>
         <div class="Box">
             <h1 class="BoxTitle">Skills</h1>
-            <h3 class="BoxText"><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum esse, officia cumque natus corporis ipsa reiciendis ipsam quae ex accusantium vero quisquam! Pariatur sint aspernatur repudiandae ut placeat, natus vero.</h3>
+            <h3 class="BoxText"><br>Here i will be showing you what my skills are and where ive learn them.</h3>
             <button class="BoxButton" style="vertical-align:middle"><span>Go to</span></button>
         </div>
         <div class="Box">
