--- a/index.HTML
+++ b/index.HTML
@@ -53,8 +53,8 @@
     </section>
     <section class="third">
         <div class="SkillsBox">
-            <h1 class="Aboutme">My skills</h1>
-            <h3 class="AboutTxt">Lorem ipsum dolor sit amet consectetur ntore illo ex laudantium obcaecati iusto, nostrum necessitatibus dolore delectus dolorum optio nam, aliquam error! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni consectetur harum asperiores. Quibusdam excepturi quod inventore illo ex laudantium obcaecati iusto, nostrum necessitatibus dolore delectus dolorum optio nam, aliquam error!Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni consectetur harum asperiores. Quibusdam excepturi quod inventore illo ex laudantium obcaecati iusto, nostrum necessitatibus dolore delectus dolorum optio nam, aliquam error!Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni consectetur harum asperiores. Quibusdam excepturi quod inventore illo ex laudantium obcaecati iusto, nostrum necessitatibus dolore delectus dolorum optio nam, aliquam error!</h3>
+            <h1 class="SkillsTitle">My skills</h1>
+            <h3 class="SkillsText">Lorem ipsum dolor sit amet consectetur ntore illo ex laudantium obcaecati iusto, nostrum necessitatibus dolore delectus dolorum optio nam, aliquam error! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni consectetur harum asperiores. Quibusdam excepturi quod inventore illo ex laudantium obcaecati iusto, nostrum necessitatibus dolore delectus dolorum optio nam, aliquam error!Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni consectetur harum asperiores. Quibusdam excepturi quod inventore illo ex laudantium obcaecati iusto, nostrum necessitatibus dolore delectus dolorum optio nam, aliquam error!Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni consectetur harum asperiores. Quibusdam excepturi quod inventore illo ex laudantium obcaecati iusto, nostrum necessitatibus dolore delectus dolorum optio nam, aliquam error!</h3>
         </div>
         <div class="Box2">
 
