uppercase to lowercase

--- a/index.HTML
+++ b/index.HTML
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./Style/theme.css" rel="stylesheet"/>
+    <link href="style/theme.css" rel="stylesheet"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class="titleIMG">
-                <img src="/Images/Me.jpg">
+                <img src="/images/Me.jpg">
             </div>
         </section>
     </section>
