--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class="titleIMG">
-                <img src="/images/me.jpg">
+                <img src="./images/me.jpg">
             </div>
         </section>
     </section>
