--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+
     <section class="first">
         <section class="NavButtons">
-            <button class="NavButton" style="vertical-align:middle"><span>Hover </span></button>
-            <button class="NavButton" style="vertical-align:middle"><span>Hover </span></button>
-            <button class="NavButton" style="vertical-align:middle"><span>Hover </span></button>
+            <button class="NavButton" style="vertical-align:middle"><span>About Me </span></button>
+            <button class="NavButton" style="vertical-align:middle"><span>My Skills</span></button>
+            <button class="NavButton" style="vertical-align:middle"><span>Projects</span></button>
         </section>
         <section class="title">
             <div class="TitleBox">
@@ -35,7 +35,7 @@
             </div>
         </section>
     </section>
-    <section class="second">
+    <!--<section class="second">
         <div class="Box">
             <h1 class="BoxTitle">About me</h1>
             <h3 class="BoxText"><br>I am an 18 year old software development student. I've been studying at sintlucas since 2021. I live in venray with my mother and my cat. I've been living there since 2021</h3>
@@ -64,6 +64,6 @@
         <div class="SkillsBox">
             <h1 class="Aboutme">My projects</h1>
         </div>
-    </section>
+    </section>-->
 </body>
 </html>
