--- a/index.html
+++ b/index.html
@@ -15,55 +15,32 @@
     <title>Document</title>
 </head>
 <body>
-
     <section class="first">
         <section class="NavButtons">
             <button class="NavButton" style="vertical-align:middle"><span>About Me </span></button>
             <button class="NavButton" style="vertical-align:middle"><span>My Skills</span></button>
             <button class="NavButton" style="vertical-align:middle"><span>Projects</span></button>
         </section>
-        <section class="title">
+        <div class="title">
+            <img class="titleIMG" src="./images/me.jpg">
             <div class="TitleBox">
-                <div class="">
-                    <h3 class="title1">Hello, I am...</h3>
-                    <h1 class="title2">Fernando Kok</h1>
-                    <h5 class="title3">I am a Software Developer based in the Netherlands...</h5>
-                </div>
+                <h3 class="title1">Hey, I'm Fernando</h3>
+                <!--<h1 class="title2">Fernando</h1>-->
+                <h1 class="title2">A software developer</h1>
             </div>
-            <div class="titleIMG">
-                <img src="./images/me.jpg">
+        </div>
+    </section>
+    <section class="second">
+        <div class="about">
+            <div class="aboutbox">
+                about
             </div>
-        </section>
-    </section>
-    <!--<section class="second">
-        <div class="Box">
-            <h1 class="BoxTitle">About me</h1>
-            <h3 class="BoxText"><br>I am an 18 year old software development student. I've been studying at sintlucas since 2021. I live in venray with my mother and my cat. I've been living there since 2021</h3>
         </div>
-        <div class="Box">
-            <h1 class="BoxTitle">Skills</h1>
-            <h3 class="BoxText"><br>Here i will be showing you what my skills are and where ive learn them.</h3>
-            <button class="BoxButton" style="vertical-align:middle"><span>Go to</span></button>
-        </div>
-        <div class="Box">
-            <h1 class="BoxTitle">Projects</h1>
-            <h3 class="BoxText"><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum esse, officia cumque natus corporis ipsa reiciendis ipsam quae ex accusantium vero quisquam! Pariatur sint aspernatur repudiandae ut placeat, natus vero.</h3>
-            <button class="BoxButton" style="vertical-align:middle"><span>Go to</span></button>
+        <div class="skills">
+            <div class="skillsbox">
+                skills
+            </div>
         </div>
     </section>
-    <section class="third">
-        <div class="SkillsBox">
-            <h1 class="SkillsTitle">My skills</h1>
-            <h3 class="SkillsText">Lorem ipsum dolor sit amet consectetur ntore illo ex laudantium obcaecati iusto, nostrum necessitatibus dolore delectus dolorum optio nam, aliquam error! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni consectetur harum asperiores. Quibusdam excepturi quod inventore illo ex laudantium obcaecati iusto, nostrum necessitatibus dolore delectus dolorum optio nam, aliquam error!Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni consectetur harum asperiores. Quibusdam excepturi quod inventore illo ex laudantium obcaecati iusto, nostrum necessitatibus dolore delectus dolorum optio nam, aliquam error!Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni consectetur harum asperiores. Quibusdam excepturi quod inventore illo ex laudantium obcaecati iusto, nostrum necessitatibus dolore delectus dolorum optio nam, aliquam error!</h3>
-        </div>
-        <div class="Box2">
-
-        </div>
-    </section>
-    <section class="fourth">
-        <div class="SkillsBox">
-            <h1 class="Aboutme">My projects</h1>
-        </div>
-    </section>-->
 </body>
 </html>
