--- a/index.html
+++ b/index.html
@@ -18,28 +18,34 @@
     <section class="first">
         <section class="NavButtons">
             <button class="NavButton" style="vertical-align:middle"><span>About Me </span></button>
-            <button class="NavButton" style="vertical-align:middle"><span>My Skills</span></button>
             <button class="NavButton" style="vertical-align:middle"><span>Projects</span></button>
+            <button class="NavButton" style="vertical-align:middle"><span>Contact</span></button>
         </section>
         <div class="title">
             <img class="titleIMG" src="./images/me.jpg">
             <div class="TitleBox">
-                <h3 class="title1">Hey, I'm Fernando</h3>
-                <!--<h1 class="title2">Fernando</h1>-->
+                <h3 class="title1">Hey, I'm Fernando Kok</h3>
                 <h1 class="title2">A software developer</h1>
+                <h2 class="title3">Based in the Netherlands</h2>
             </div>
         </div>
     </section>
     <section class="second">
         <div class="about">
             <div class="aboutbox">
-                about
+                <h2><b>A little about me</b></h2>
             </div>
         </div>
         <div class="skills">
             <div class="skillsbox">
-                skills
+                <h2><b>What my skills are</b></h2>
+                <h4>What my skills are<br>What my skills areWhat my skills are<br>What my skills areWhat my skills areWhat my skills areWhat my skills are</h4>
             </div>
+        </div>
+    </section>
+    <section class="third">
+        <div class="projects">
+            <h1>Pro</h1>
         </div>
     </section>
 </body>
