--- a/index.html
+++ b/index.html
@@ -15,18 +15,19 @@
     <title>Document</title>
 </head>
 <body>
+    <section class="NavButtons">
+        <!-- <a class="Logo">Fernando kok</a> -->
+        <button class="NavButton" style="vertical-align:middle"><span>About Me </span></button>
+        <button class="NavButton" style="vertical-align:middle"><span>Projects</span></button>
+        <button class="NavButton" style="vertical-align:middle"><span>Contact</span></button>
+    </section>
     <section class="first">
-        <section class="NavButtons">
-            <button class="NavButton" style="vertical-align:middle"><span>About Me </span></button>
-            <button class="NavButton" style="vertical-align:middle"><span>Projects</span></button>
-            <button class="NavButton" style="vertical-align:middle"><span>Contact</span></button>
-        </section>
         <div class="title">
             <img class="titleIMG" src="./images/me.jpg">
             <div class="TitleBox">
                 <h3 class="title1">Hey, I'm Fernando Kok</h3>
-                <h1 class="title2">A software developer</h1>
-                <h2 class="title3">Based in the Netherlands</h2>
+                <h1 class="title2">Welcome to my Portfolio!</h1>
+                <h2 class="title3">I am Based in the Netherlands</h2>
             </div>
         </div>
     </section>
@@ -34,18 +35,47 @@
         <div class="about">
             <div class="aboutbox">
                 <h2><b>A little about me</b></h2>
+                <br>
+                <h3>Im a 18 year old student currently in my second year of studying software development at Sintlucas.</h3>
             </div>
         </div>
         <div class="skills">
             <div class="skillsbox">
-                <h2><b>What my skills are</b></h2>
-                <h4>What my skills are<br>What my skills areWhat my skills are<br>What my skills areWhat my skills areWhat my skills areWhat my skills are</h4>
+                <h2><b>My skills?</b></h2>
+                <br>
+                <h4>Altought I made this website myself, Web-Development isn't my forte. My main focus lies on making game in unity using C#. </h4>
             </div>
         </div>
     </section>
     <section class="third">
+        <div class="projectTitle">
+            <a><b>Projects</b></a>
+        </div>
         <div class="projects">
-            <h1>Pro</h1>
+            <h1><b>Adventure land</b></h1>
+            <br>
+            <h2>This is one of my first 2d shooter games that i have made in unity.</h2>
+        </div>
+        <div class="projects">
+            <h1><b>Adventure land</b></h1>
+            <br>
+            <h2>This is one of my first 2d shooter games that i have made in unity</h2>
+        </div>
+        <div class="projects">
+            <h1><b>Adventure land</b></h1>
+            <br>
+            <h2>This is one of my first 2d shooter games that i have made in unity.</h2>
+        </div>
+        <div class="projects">
+            <h1><b>Adventure land</b></h1>
+            <br>
+            <h2>This is one of my first 2d shooter games that i have made in unity.</h2>
+        </div>
+    </section>
+
+    <section class="footer">
+        <div>
+            
         </div>
     </section>
 </body>
