--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="TitleBox">
                 <h3 class="title1">Hey, I'm Fernando Kok</h3>
                 <h1 class="title2">Welcome to my Portfolio!</h1>
-                <h2 class="title3">I am Based in the Netherlands</h2>
+                <h2 class="title3">I'm Based in the Netherlands</h2>
             </div>
         </div>
     </section>
