--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <section class="NavButtons">
-        <!-- <a class="Logo">Fernando kok</a> -->
+        <!-- <a class="Logo">Fernando kok</a>-->
         <button class="NavButton" style="vertical-align:middle"><span>About Me </span></button>
         <button class="NavButton" style="vertical-align:middle"><span>Projects</span></button>
         <button class="NavButton" style="vertical-align:middle"><span>Contact</span></button>
@@ -33,14 +33,14 @@
     </section>
     <section class="second">
         <div class="about">
-            <div class="aboutbox">
+            <div class="aboutBox">
                 <h2><b>A little about me</b></h2>
                 <br>
                 <h3>Im a 18 year old student currently in my second year of studying software development at Sintlucas.</h3>
             </div>
         </div>
         <div class="skills">
-            <div class="skillsbox">
+            <div class="skillsBox">
                 <h2><b>My skills?</b></h2>
                 <br>
                 <h4>Altought I made this website myself, Web-Development isn't my forte. My main focus lies on making game in unity using C#. </h4>
@@ -50,21 +50,6 @@
     <section class="third">
         <div class="projectTitle">
             <a><b>Projects</b></a>
-        </div>
-        <div class="projects">
-            <h1><b>Adventure land</b></h1>
-            <br>
-            <h2>This is one of my first 2d shooter games that i have made in unity.</h2>
-        </div>
-        <div class="projects">
-            <h1><b>Adventure land</b></h1>
-            <br>
-            <h2>This is one of my first 2d shooter games that i have made in unity</h2>
-        </div>
-        <div class="projects">
-            <h1><b>Adventure land</b></h1>
-            <br>
-            <h2>This is one of my first 2d shooter games that i have made in unity.</h2>
         </div>
         <div class="projects">
             <h1><b>Adventure land</b></h1>
