--- a/index.html
+++ b/index.html
@@ -52,9 +52,15 @@
             <a><b>Projects</b></a>
         </div>
         <div class="projects">
-            <h1><b>Adventure land</b></h1>
-            <br>
-            <h2>This is one of my first 2d shooter games that i have made in unity.</h2>
+            <div id="imageProjects">
+              <!--  <img>-->
+            </div>
+            <div id="titleProjects">
+                <h1><b>Adventure Land</b></h1>
+            </div>
+            <div id="textProjects">
+                <h2>This is one of my first 2d shooter games that i have made in unity.</h2>
+            </div>
         </div>
     </section>
 
