--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-  <!-- Header Section -->
+  <!-- Header -->
   <header>
     <div class="container">
       <h1>Your Name</h1>
@@ -23,12 +23,12 @@
     </div>
   </header>
 
-  <!-- About Section -->
+  <!-- About -->
   <section id="about">
     <div class="container">
       <h2>About Me</h2>
       <div class="about-content">
-        <img src="images/profile.jpg" alt="Your Photo" class="profile-pic">
+        <img src="images/me.jpg alt="Your Photo" class="profile-pic">
         <div class="about-text">
           <p>Hi! I'm Fernando Kok, a passionate game developer with expertise in creating engaging and immersive games. I specialize in game design, programming, and using engines like Unity and Unreal Engine.</p>
           <p>I love bringing ideas to life and continuously learning new technologies to enhance my game development skills.</p>
@@ -37,14 +37,14 @@
     </div>
   </section>
 
-  <!-- Skills Section -->
+  <!-- Skills -->
   <section id="skills">
     <div class="container">
       <h2>Skills & Tools</h2>
       <div class="skills-list">
         <div class="skill-item">
           <h3>Programming Languages</h3>
-          <p>C#, C++, JavaScript, Python</p>
+          <p>C#, JavaScript, HTML & CSS</p>
         </div>
         <div class="skill-item">
           <h3>Game Engines</h3>
@@ -52,14 +52,13 @@
         </div>
         <div class="skill-item">
           <h3>Tools & Software</h3>
-          <p>Blender, Photoshop, Git, Jira</p>
+          <p>Visual studio code, Blender & Photoshop</p>
         </div>
-        <!-- Add more skills as needed -->
       </div>
     </div>
   </section>
 
-  <!-- Games Section -->
+  <!-- Games -->
   <section id="games">
     <div class="container">
       <h2>My Games</h2>
@@ -92,7 +91,7 @@
     </div>
   </section>
 
-  <!--Contact-->
+  <!-- Contact -->
   <section id="contact">
     <div class="container">
       <h2>Contact Me</h2>
