--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container">
       <h2>About Me</h2>
       <div class="about-content">
-        <img src="images/me.jpg alt="Your Photo" class="profile-pic">
+        <img src="images/me.jpg alt="Your Photo class="profile-pic">
         <div class="about-text">
           <p>Hi! I'm Fernando Kok, a passionate game developer with expertise in creating engaging and immersive games. I specialize in game design, programming, and using engines like Unity and Unreal Engine.</p>
           <p>I love bringing ideas to life and continuously learning new technologies to enhance my game development skills.</p>
