--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Header -->
   <header>
     <div class="container">
-      <h1>Your Name</h1>
+      <h1>Fernando Kok</h1>
       <p>Game Developer | Programmer | Designer</p>
       <nav>
         <ul>
@@ -30,7 +30,7 @@
       <div class="about-content">
         <img src="images/me.jpg alt="Your Photo class="profile-pic">
         <div class="about-text">
-          <p>Hi! I'm Fernando Kok, a passionate game developer with expertise in creating engaging and immersive games. I specialize in game design, programming, and using engines like Unity and Unreal Engine.</p>
+          <p>Hi! I'm Fernando Kok, a passionate game developer with expertise in creating engaging and immersive games. I specialize in game design, programming, and using engines like Unity.</p>
           <p>I love bringing ideas to life and continuously learning new technologies to enhance my game development skills.</p>
         </div>
       </div>
