--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container">
       <h2>About Me</h2>
       <div class="about-content">
-        <img src="images/me.jpg alt="Your Photo class="profile-pic">
+        <img src="images/me.jpg" alt="Your Photo" class="profile-pic">
         <div class="about-text">
           <p>Hi! I'm Fernando Kok, a passionate game developer with expertise in creating engaging and immersive games. I specialize in game design, programming, and using engines like Unity.</p>
           <p>I love bringing ideas to life and continuously learning new technologies to enhance my game development skills.</p>
@@ -96,9 +96,9 @@
     <div class="container">
       <h2>Contact Me</h2>
       <form id="contact-form">
-        <input type="text" id="name" placeholder="Your Name" required>
-        <input type="email" id="email" placeholder="Your Email" required>
-        <textarea id="message" placeholder="Your Message" required></textarea>
+        <label for="name"></label><input type="text" id="name" placeholder="Your Name" required>
+        <label for="email"></label><input type="email" id="email" placeholder="Your Email" required>
+        <label for="message"></label><textarea id="message" placeholder="Your Message" required></textarea>
         <button type="submit">Send Message</button>
       </form>
       <div class="social-links">
